# libhydrocalc

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  setup.py
api/mathcad/: CMakeLists.txt  README.md
api/mathcad/cmake/: utils.cmake
api/mathcad/doc/: geometry_vector.md
api/mathcad/examples/: calc_csi.xmcd  composite_erase.xmcd  composite_get_getall.xmcd  copy_composite.xmcd  create_composite.xmcd  create_hr.xmcd  create_nested_composite.xmcd  pointer_composite.xmcd
api/mathcad/src/: RCa19376  RCa28800  clear.h  composite_erase.h  composite_get.h  composite_getall.h  composite_pushback.h  composite_size.h  create_composite.h  create_hydraulic_resistance.h  delete.h  evaluate.h  get_cross_section_area.h  get_diagram.h  get_friction_part_coeff.h  get_geometry.h  get_geometry_part_coeff.h  get_hydraulic_diameter.h  get_id.h  get_length.h  get_local_resistance_coeff.h  get_name.h  get_re.h  get_rel_friction_coeff.h  get_rou.h  get_viscosity.h  libhydrocalcmcad.rc  mathcad_api.cpp  mathcad_api.h  rgp.cpp  set_geometry.h  set_length.h  set_name.h  set_re.h  set_rou.h  set_viscosity.h
api/python/: CMakeLists.txt
api/python/examples/: create_composite.py  create_hr.py
api/python/src/: opaque_types.h  py_api.cpp
api/python/src/wrappers/: hydraulic_resistance.h
cmake/: utils.cmake
doc/: Doxyfile
hydrocalc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
libhydrocalc/: CurveCylindricalConfuser.cpp  CurveCylindricalConfuser.h  CurveCylindricalDiffuser.cpp  CurveCylindricalDiffuser.h  CylindricalBend.cpp  CylindricalBend.h  CylindricalBendNiche.cpp  CylindricalBendNiche.h  CylindricalFriction.cpp  CylindricalFriction.h  CylindricalHydraulicResistance.cpp  CylindricalHydraulicResistance.h  HydraulicComposite.cpp  HydraulicComposite.h  RingFriction.cpp  RingFriction.h  SharpUnexpectedSizeChange.cpp  SharpUnexpectedSizeChange.h  StraightCylindricalConfuser.cpp  StraightCylindricalConfuser.h  StraightCylindricalDiffuser.cpp  StraightCylindricalDiffuser.h  complex_resistance.cpp  complex_resistance.h  composite.cpp  composite.h  cylindrical_bend.cpp  cylindrical_bend.h  cylindrical_bend_niche.cpp  cylindrical_bend_niche.h  cylindrical_confuser_curve.cpp  cylindrical_confuser_curve.h  cylindrical_confuser_curve_direct.cpp  cylindrical_confuser_curve_direct.h  cylindrical_confuser_straight.cpp  cylindrical_confuser_straight.h  cylindrical_confuser_straight_direct.cpp  cylindrical_confuser_straight_direct.h  cylindrical_diffuser_curve.cpp  cylindrical_diffuser_curve.h  (+28 more)
libhydrocalc/approximations/: E523.cpp  E523.h  E59.cpp  E59.h  F52.cpp  F52.h  KE27.cpp  KE27.h  KN27.cpp  KN27.h
libhydrocalc/c/: c_api.cpp  c_api.h
tests/: CMakeLists.txt
tests/basics/: test_curve_confuser.cpp
tests/cmake/: libhydrocalc-config.cmake.in
tests/debug/: test_debug.cpp
